--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "token":"NTY5MzQxMTY2ODA2MzY4MjU4.XLxfyQ.pxv3EXJcjftIP8BLDNX0ML7zyS0",
-    "prefix":"/" 
+    "prefix":"/" ,
+    "mongouri":"mongodb://usuario1:contrasena123@ds231199.mlab.com:31199/creando-un-bot"
 }
